fixed dark mode wrapper2 bg
fixed dark mode wrapper2 bg

--- a/style.css
+++ b/style.css
@@ -152,6 +152,10 @@ nav, .scroll, .header {
     color: white;
 }
 
+.dark-theme .project__wrapper2{
+    background-color: white;
+}
+
 .dark-theme section {
     background-color: #242424;
 }
